indicator-sound-switcher (2.3.8-1) jammy; urgency=low

  * Only consider available ports for shortcut switching (addresses #118)

 -- Dmitry Kann <yktooo@gmail.com>  Fri, 13 May 2022 10:25:37 +0200

indicator-sound-switcher (2.3.7-1) impish; urgency=low

  * Provide fallback PNG symbolic icons (addresses #91)

 -- Dmitry Kann <yktooo@gmail.com>  Sun, 19 Dec 2021 15:07:35 +0100

indicator-sound-switcher (2.3.6-1) hirsute; urgency=low

  * Allow assigning same keyboard shortcut to multiple ports (#106)
  * Display card's vendor and product name in Preferences (#105)

 -- Dmitry Kann <yktooo@gmail.com>  Fri, 18 Jun 2021 14:09:32 +0200

indicator-sound-switcher (2.3.5.2-1) focal; urgency=low

  * Determine app version based on the installed package

 -- Dmitry Kann <yktooo@gmail.com>  Sun, 27 Dec 2020 20:25:24 +0200

indicator-sound-switcher (2.3.5.1-1) focal; urgency=low

  * No-change commit to address Launchpad failure

 -- Dmitry Kann <yktooo@gmail.com>  Sun, 27 Dec 2020 19:40:22 +0200

indicator-sound-switcher (2.3.5-1) focal; urgency=low

  * Add snap package (#97); thanks to @eth481642 (Dmitry Maximov)
  * Fix requirements in documentation (#98)
  * chore: Migrate setup.py to setuptools

 -- Dmitry Kann <yktooo@gmail.com>  Sun, 27 Dec 2020 14:41:09 +0200

indicator-sound-switcher (2.3.4-1) eoan; urgency=low

  * Fix symbolic icons (#88)
  * Remove border around the notebook in Preferences dialog

 -- Dmitry Kann <yktooo@gmail.com>  Mon, 06 Jun 2020 14:21:16 +0200

indicator-sound-switcher (2.3.3-1) eoan; urgency=low

  * Fix broken SVG icons (#87)
  * Update RU, NL translations

 -- Dmitry Kann <yktooo@gmail.com>  Mon, 26 May 2020 18:57:12 +0200

indicator-sound-switcher (2.3.2-1) eoan; urgency=low

  * Explicitly include .po and exclude .mo in source distribution (#82)

 -- Dmitry Kann <yktooo@gmail.com>  Mon, 25 May 2020 18:41:22 +0200

indicator-sound-switcher (2.3.1-1) eoan; urgency=low

  * Use directory of setup.py when looking for .po files (#82)